--- a/config.json
+++ b/config.json
@@ -2,49 +2,7 @@
     "name": "Vladimir Lima (vladimirflima)",
     "job": "Desenvolvedor",
     "github": "vladimirflima",
-    "playlists": {
-          "jogos": [
-              {
-                "title": "Frostpunk - Neve e Steak tartare",
-                "url": "https://www.youtube.com/watch?v=QsqatJxAUtk",
-                "thumb": "https://img.youtube.com/vi/QsqatJxAUtk/hqdefault.jpg"
-              },
-              {
-                "title": "Frostpunk - Neve e Steak tartare",
-                "url": "https://www.youtube.com/watch?v=O8jtAyPuhNg",
-                "thumb": "https://img.youtube.com/vi/O8jtAyPuhNg/hqdefault.jpg"
-              },
-              {
-                "title": "Gas Station Simulator - 8 dias sem dormir!",
-                "url": "https://www.youtube.com/watch?v=R1d0DyRDG_Q",
-                "thumb": "https://img.youtube.com/vi/R1d0DyRDG_Q/hqdefault.jpg"
-              },
-              {
-                "title": "Gartic Phone - Não assista a esse NerdPlayer!",
-                "url": "https://www.youtube.com/watch?v=0oJQUs5oRiM",
-                "thumb": "https://img.youtube.com/vi/0oJQUs5oRiM/hqdefault.jpg"
-              },
-              {
-                "title": "Netdecking Estraga o Magic?",
-                "url": "https://www.youtube.com/watch?v=dXihyhYEsEc",
-                "thumb": "https://img.youtube.com/vi/dXihyhYEsEc/hqdefault.jpg"
-              },
-              {
-                "title": "Cities: Skylines - EPCOTAB, o futuro de Saint Laurrent",
-                "url": "https://www.youtube.com/watch?v=zybKHMgLCWU",
-                "thumb": "https://img.youtube.com/vi/zybKHMgLCWU/hqdefault.jpg"
-              },
-              {
-                "title": "We Were Here Together - Os Enigmas deste Mundo",
-                "url": "https://www.youtube.com/watch?v=UKgQsrHUG40",
-                "thumb": "https://img.youtube.com/vi/UKgQsrHUG40/hqdefault.jpg"
-              },
-              {
-                "title": "Microsoft Flight Simulator - Top Gun: Oceania - Missão RJ!",
-                "url": "https://www.youtube.com/watch?v=n3TneUb5c-w",
-                "thumb": "https://img.youtube.com/vi/n3TneUb5c-w/hqdefault.jpg"
-              }
-            ],
+    "playlists": {      
           "front-end": [
             {
               "title": "Jogo com JavaScript #01: Criando um Flappy Bird do ZERO!!!",
@@ -52,14 +10,14 @@
               "thumb": "https://img.youtube.com/vi/jOAU81jdi-c/hqdefault.jpg"
             },
             {
-              "title": "Jogo com JavaScript #01: Criando um Flappy Bird do ZERO!!!",
+              "title": "LANDING PAGE COM HTML e CSS!",
               "url": "https://www.youtube.com/watch?v=llF6vD-RljE",
               "thumb": "https://img.youtube.com/vi/llF6vD-RljE/hqdefault.jpg"
             },
             {
-              "title": "A Primeira Aula de Flutter Que Todo Mundo Deveria Ter",
-              "url": "https://www.youtube.com/watch?v=J4BVaXkwmM8",
-              "thumb": "https://img.youtube.com/vi/J4BVaXkwmM8/hqdefault.jpg"
+              "title": "FALTA DEV DESENROLADO - Experience Podcast 29 - Deyvid Nascimento vulgo Mano Deyvin",
+              "url": "https://www.youtube.com/watch?v=qUOTbRW0HSw",
+              "thumb": "https://img.youtube.com/vi/qUOTbRW0HSw/hqdefault.jpg"
             },
             {
               "title": "O QUE SÃO FRAMEWORKS E BIBLIOTECAS? QUAIS AS DIFERENÇAS?",
@@ -99,20 +57,20 @@
               "thumb": "https://img.youtube.com/vi/dvd3pNYh7So/hqdefault.jpg"
             },
             {
-              "title": "Node JS: Construindo CRUDs com file system focando em serialização e JSON",
+              "title": "CRUD Angular + Spring | 29: Atualizar Curso: Salvando o Formulário",
               "url": "https://www.youtube.com/watch?v=8q36rNS5yVo",
               "thumb": "https://img.youtube.com/vi/8q36rNS5yVo/hqdefault.jpg"
             },
             
             {
-              "title": "O que é o Java? #HipstersPontoTube",
-              "url": "https://www.youtube.com/watch?v=90NcVNsKGik",
-              "thumb": "https://img.youtube.com/vi/90NcVNsKGik/hqdefault.jpg"
+              "title": "PostgreSQL vs MySQL",
+              "url": "https://www.youtube.com/watch?v=btjBNKP49Rk",
+              "thumb": "https://img.youtube.com/vi/btjBNKP49Rk/hqdefault.jpg"
             },
             {
-              "title": "O que é Machine Learning? #HipstersPontoTube",
-              "url": "https://www.youtube.com/watch?v=Iuz_jc96bQk",
-              "thumb": "https://img.youtube.com/vi/Iuz_jc96bQk/hqdefault.jpg"
+              "title": "O mínimo que você precisa saber sobre Docker!",
+              "url": "https://www.youtube.com/watch?v=ntbpIfS44Gw",
+              "thumb": "https://img.youtube.com/vi/ntbpIfS44Gw/hqdefault.jpg"
             },
             {
               "title": "A MELHOR linguagem de programação com Fabio Akita | #HipstersPontoTube",
@@ -129,7 +87,49 @@
               "url": "https://www.youtube.com/watch?v=0JWMVc1CqpA",
               "thumb": "https://img.youtube.com/vi/0JWMVc1CqpA/hqdefault.jpg"
             }
-          ]
+          ],
+          "jogos": [
+              {
+                "title": "Frostpunk - Neve e Steak tartare",
+                "url": "https://www.youtube.com/watch?v=QsqatJxAUtk",
+                "thumb": "https://img.youtube.com/vi/QsqatJxAUtk/hqdefault.jpg"
+              },
+              {
+                "title": "Remakes MAIS IMPORTANTES de Pokémon - Review e Retrospectiva de Pokémon Fire Red e Leaf Green",
+                "url": "https://www.youtube.com/watch?v=O8jtAyPuhNg",
+                "thumb": "https://img.youtube.com/vi/O8jtAyPuhNg/hqdefault.jpg"
+              },
+              {
+                "title": "Gas Station Simulator - 8 dias sem dormir!",
+                "url": "https://www.youtube.com/watch?v=R1d0DyRDG_Q",
+                "thumb": "https://img.youtube.com/vi/R1d0DyRDG_Q/hqdefault.jpg"
+              },
+              {
+                "title": "Gartic Phone - Não assista a esse NerdPlayer!",
+                "url": "https://www.youtube.com/watch?v=0oJQUs5oRiM",
+                "thumb": "https://img.youtube.com/vi/0oJQUs5oRiM/hqdefault.jpg"
+              },
+              {
+                "title": "Netdecking Estraga o Magic?",
+                "url": "https://www.youtube.com/watch?v=dXihyhYEsEc",
+                "thumb": "https://img.youtube.com/vi/dXihyhYEsEc/hqdefault.jpg"
+              },
+              {
+                "title": "Cities: Skylines - EPCOTAB, o futuro de Saint Laurrent",
+                "url": "https://www.youtube.com/watch?v=zybKHMgLCWU",
+                "thumb": "https://img.youtube.com/vi/zybKHMgLCWU/hqdefault.jpg"
+              },
+              {
+                "title": "We Were Here Together - Os Enigmas deste Mundo",
+                "url": "https://www.youtube.com/watch?v=UKgQsrHUG40",
+                "thumb": "https://img.youtube.com/vi/UKgQsrHUG40/hqdefault.jpg"
+              },
+              {
+                "title": "Microsoft Flight Simulator - Top Gun: Oceania - Missão RJ!",
+                "url": "https://www.youtube.com/watch?v=n3TneUb5c-w",
+                "thumb": "https://img.youtube.com/vi/n3TneUb5c-w/hqdefault.jpg"
+              }
+            ]
         },
     "favorites": {
           "Favoritos": [
